changed title and  '});' position before commentary

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Frutas</title>
 </head>
 <body>
   
@@ -30,6 +30,7 @@
                 newFruit.id = [i];
                 datalist.appendChild(newFruit);      
                 }
+            });
             /*
             Outra forma de fazer: 
             frutas.forEach(function(element, index){
@@ -40,7 +41,6 @@
                 }
             }
              */
-            });
 
 
     </script>
